--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,7 +126,7 @@ p {
     text-decoration: none;
     font-size: 40px;
     font-family: 'Ewert', cursive;
-    color: #FFB02D;
+    color: #ACDBC9;
 }
 .nav {
     height: 75px;
